# MARID_UAV

./: .gitattributes  .gitignore  AI-ML-Experiments  CODE_OF_CONDUCT.md  CONTRIBUTING.md  OPTION_A_ARCHITECTURE_VERIFICATION.md  OPTION_A_IMPLEMENTATION.md  OPTION_A_IMPLEMENTATION_SUMMARY.md  PHYSICS_FORMULAS.md  PID_CONTROLLER_ANALYSIS.md  README.md  VERIFICATION_CHECKLIST.md  dem_to_heightmap.py  test_20dim_fix.py  test_controller_ai_integration.py  test_indices_verification.py  test_option_a_complete.py  test_state_vector_dimensions.py  wheels.txt
AI-ML-Experiments/: ANN_learningrates_binary.ipynb  ANN_learninrates_binary.py  ANN_multi_in_out.ipynb  ANN_multi_in_out.py  ANN_multi_in_out_iris.ipynb  ANN_multi_in_out_iris.py  Gradient_Descent_1D.ipynb  Gradient_Descent_2D.ipynb  Gradient_descent_2D_refactored.ipynb  README.md  cascade_eval.ipynb  cascade_eval.py  compare_results.py  eskf_attitude_ff_train.py  eskf_attitude_lstm_train.py  eskf_position_lstm_train.py  eskf_velocity_lstm_train.py  gradient_descent_1D.py  gradient_descent_2D.ipynb  gradient_descent_2D.py  gradient_descent_2D_refactored.py  gradient_descent_optimization.ipynb  gradient_descent_optimization_studies.md  model_observation.ipynb  parametric_experiments1D.py  parametric_experiments_1D.ipynb  parametric_experiments_1D.py  pose_from_imu_altitude_train.ipynb  pose_from_imu_altitude_train.py  pytorch_ANN_1D.ipynb  pytorch_ANN_1D.py  pytorch_binary_classification.ipynb  pytorch_binary_classification.py  pytorch_parametric_regression.ipynb  pytorch_parametric_regression.py
data/: marid_pose_imu_altitude_20260215_104003_chunk0000.npz  marid_pose_imu_altitude_20260216_092323_chunk0000.npz  marid_pose_imu_altitude_20260218_122826_chunk0000.npz  marid_pose_imu_altitude_20260218_123146_chunk0001.npz  marid_pose_imu_altitude_20260218_123506_chunk0002.npz  marid_pose_imu_altitude_20260218_123745_chunk0003.npz
src/FAST_LIO_ROS2/FAST_LIO/: CMakeLists.txt
src/FAST_LIO_ROS2/FAST_LIO/Log/: mat_pre.txt
src/FAST_LIO_ROS2/FAST_LIO/config/: marid.yaml
src/FAST_LIO_ROS2/FAST_LIO/src/: laserMapping.cpp  preprocess.cpp  preprocess.h
src/marid_controller/: CMakeLists.txt  package.xml
src/marid_controller/config/: joy_teleop.yaml  marid_controllers.yaml  marid_odom_pub.yaml
src/marid_controller/imu/: imu.py
src/marid_controller/launch/: ai_controller.launch.py  attitude_controller.launch.py  controller.launch.py  full_controller.launch.py  guidance.launch.py  guidance_tracker.launch.py  joystick_teleop_wings.launch.py  option_a_controller.launch.py  safety_node.launch.py  thrust_controller.launch.py
src/marid_controller/marid_controller/: ai_model.py  cmd_vel_to_wings.py  joy_incrementer.py  marid_ai_controller.py  marid_ai_guidance.py  marid_attitude_controller.py  marid_data_logger.py  marid_guidance_tracker.py  marid_maneuver_gen.py  marid_odom_pub.py  marid_safety_node.py  marid_thrust_controller.py  state_normalizer.py
src/marid_controller/scripts/: analyze_pid.py
src/marid_description/: CMakeLists.txt
src/marid_description/launch/: display.launch.py  display_alt.launch.py  display_new.launch.py  gazebo.launch.py  gazebo_alt.launch.py  gazebo_new.launch.py
src/marid_description/meshes/: front_wheel_arm.stl  left_wing.stl  main_tail.stl  rear_wheel_arm.stl  right_wing.stl  tail_left.stl  tail_right.stl  wheel.stl
src/marid_description/meshes_2/: base_link_front.stl  front_left_arm.stl  front_left_tire.stl  front_right_arm.stl  front_right_tire.stl  left_wing.stl  main_tail.stl  rear_arm.stl  rear_tire.stl  right_wing.stl  tail_left.stl  tail_right.stl
src/marid_description/meshes_3/: base_link_front.stl  left_wing.stl  main_tail.stl  right_wing.stl  tail_left.stl  tail_right.stl
src/marid_description/rviz/: display.rviz
src/marid_description/urdf/: marid.urdf.xacro  marid_alt.urdf.xacro  marid_alt_gazebo.xacro  marid_gazebo.xacro  marid_new.urdf.xacro  marid_new_gazebo.xacro  marid_ros2_control.xacro
src/marid_description/worlds/: empty.sdf  lift_drag_world.sdf  mlt_copter.sdf  terrain.world  wt.sdf
src/marid_description/worlds/terrain_world/: model.config  model.sdf
src/marid_localization/: CMakeLists.txt  package.xml
src/marid_localization/config/: ekf.yaml  imu_filter_madgwick.yaml  navsat_transform.yaml
src/marid_localization/launch/: fast_lio.launch.py  local_localization.launch.py
src/marid_localization/marid_localization/: air_density_calculator.py  airspeed_converter.py  baro_to_alt.py  camera_hud_overlay.py  forward_flow_estimator.py  gazebo_pose_service.py  gazebo_pose_to_odom.py  imu_add_gravity.py  imu_republisher.py  lidar_time_field.py  marid_pose_reader.py  optical_flow_estimator.py  sun_sensor_sim.py  vx_error_monitor.py  wheel_odometry.py  wind_estimator.py
src/marid_localization/rviz/: marid_loc_model.rviz
src/marid_logging/: README.md  package.xml  setup.cfg  setup.py
src/marid_logging/marid_logging/: eskf_gt_logger.py  marid_data_logger.py  pose_estimator_logger.py
src/marid_logging/marid_logging/archive/: eskf_ktau_kd_logger.py
tests/: README.md  test_20dim_fix.py  test_controller_ai_integration.py  test_indices_verification.py  test_option_a_complete.py  test_state_vector_dimensions.py
