<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>marid_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="mc@todo.todo">mc</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  
  <!-- Optional: For AI model training (install separately: pip install torch or tensorflow) -->
  <!-- <exec_depend>python3-numpy</exec_depend> -->


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
